--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <main>
         <article class="box">
             <h1>MD Ikramul Kayes</h1>
-            <div><a href="mailto:your.email@example.com">your-email@example.com</a></div>
+            <div><a href="mailto:ikramul.kayesgg@gmail.com">ikramul.kayesgg@gmail.com</a></div>
             
             <section class="box">
                 <h2>
@@ -21,8 +21,8 @@
                     Social media
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/<handle>">@github_handle</a></li>
-                    <li><a href="https://linkedin.com/in/<handle>">@linkedin_handle</a></li>
+                    <li><a href="https://github.com/ikramulkayes">@Github_handle</a></li>
+                    <li><a href="https://linkedin.com/in/md-ikramul-kayes-753674214/">@Linkedin_handle</a></li>
                     <li><a href="https://twitter.com/<handle>">@twitter_handle</a></li>
                 </ul>    
             </section>
