--- a/src/index.html
+++ b/src/index.html
@@ -31,12 +31,12 @@
                 <div class="education">
                     <h2>
                         <i class="fa fa-certificate" aria-hidden="true"></i>
-                        School name
+                        Brac University
                     </h2>
-                    <h3>Major</h3>
+                    <h3>Computer Science and Engineering</h3>
                     <ul>
                         <li>GPA: 4.0</li>
-                        <li>Years</li>
+                        <li>1st Year</li>
                     </ul>
                 </div>
             </section>
@@ -47,6 +47,8 @@
                     Skills
                 </h2>
                 <ul>
+                    <li>Python</li>
+                    <li>Azure Fundamentals</li>
                     <li>CSS</li>
                     <li>HTML</li>
                     <li>JavaScript</li>
