--- a/src/index.html
+++ b/src/index.html
@@ -65,8 +65,8 @@
                 </h2>
                 <h3>Microsoft Learn Student Ambassador</h3>
                 <ul>
-                    <li>Some skill</li>
-                    <li>Another skill</li>
+                    <li>Maintainer at CNCF Glossary</li>
+                    <li>Participated in some Hackathons</li>
                 </ul>
             </section>
             <section class="box">
@@ -75,10 +75,10 @@
                     Internships
                 </h2>
 
-                <h3>Company name</h3>
+                <h3>MNP Techs</h3>
                 <ul>
-                    <li>Accomplishment</li>
-                    <li>Another accomplishment</li>
+                    <li>Data Analysist</li>
+                    <li>1 month experience</li>
                 </ul>
             </section>
             <section class="box">
@@ -87,11 +87,11 @@
                     Projects
                 </h2>
                 
-                <h3>Great hackathon</h3>
-                <div>This was a great hack!</div>
+                <h3>Hacktoberfest</h3>
+                <div>Good hackathon for beginners</div>
                 <ul>
-                    <li>Cool technology used</li>
-                    <li>Prize won</li>
+                    <li>Encouraged beginners to perticipate in open source contribution</li>
+                    <li>Won some swags</li>
                 </ul>
             </section>
         </article>
