--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
                     </h2>
                     <h3>Computer Science and Engineering</h3>
                     <ul>
-                        <li>GPA: 4.0</li>
+                        <li>CGPA: 4.0</li>
                         <li>1st Year</li>
                     </ul>
                 </div>
